--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,9 +3,9 @@ body {
 	background-color: #161616;
   background-image: url('images/bg.svg');
 	font-family: 'Roboto', sans-serif;
-	/* background-position: center center; */
+
 	background-repeat: no-repeat;
-	/* background-size: cover;  */
+
 	@apply lg:bg-fixed lg:bg-cover relative;
 
 }
@@ -21,21 +21,17 @@ body {
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
-#my-text{
 
-clip-path: polygon(0 0, 100% 1%, 100% 100%, 0% 100%);
-}
 
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+  /* border: 2px solid red; */
 }
 
 /* element classnames and tags  */
-.loader {
-	@apply bg-gradient-to-r from-dark to-dark/70;
-}
+
 .cls-1 {
 	fill: #fff;
 }
@@ -46,28 +42,28 @@ clip-path: polygon(0 0, 100% 1%, 100% 100%, 0% 100%);
 }
 
 .cls-2 {
-	fill: #fff;
-}
-/* .name::after{
-    content: " ";
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    transform-origin: 100% 0;
-    background-color: #2c5364;
+  animation: animName 2s ease-in-out infinite;
+  fill: #C3773D;
 
-} */
+}
+#load-logo {
+  height: 100px;
+  width: 100px;
+  stroke: white;
+  fill-opacity: 0;
+  stroke-width: 3px;
+  stroke-dasharray: 4500;
+  animation: draw 5s ease;
+}
+
+
 #me {
 	-webkit-filter: drop-shadow(5px 5px 5px #222);
 	filter: drop-shadow(0px 5px 5px #d6ad60) grayscale();
 	/* filter: ; */
 }
 
-.svg-s {
-	stroke: #d6ad60;
-}
+
 
   .main-nav a {
     
@@ -103,5 +99,18 @@ clip-path: polygon(0 0, 100% 1%, 100% 100%, 0% 100%);
     left: 0;
     height: 100%;
     width: 100%;
+  }
+  @keyframes draw {
+    0% {
+      stroke-dashoffset: 4500;
+      fill-opacity: 0;
+    }
+    75%{
+      fill-opacity: 0;
+    }
+    100% {
+      stroke-dashoffset: 0;
+      fill-opacity: 1;
+    }
   }
  
